Add build commands

--- a/package.json
+++ b/package.json
@@ -4,21 +4,55 @@
   "description": "Installer for Jaxboards on Node",
   "author": "Chad Wade Day, Jr. <cdayjr@chadwadedayjr.info>",
   "license": "Blue Oak Model License 1.0.0",
+  "main": "lib/install.js",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "start": "ts-node src/install.ts",
+    "build": "npm run clean && npm run build-dist",
+    "build-dist": "tsc --build tsconfig.json && prettier --write \"./dist/**/*.js\"",
+    "clean": "rm -rf ./dist",
+    "lint": "tsc --noEmit --project tsconfig.json && lint-staged",
+    "pre-commit": "npm run lint",
+    "test": "jest",
+    "test-coverage": "jest --coverage",
+    "ts-check": "tsc --noEmit --project tsconfig.json",
+    "prepublishOnly": "npm run build"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pre-commit"
+    }
+  },
+  "lint-staged": {
+    "./**/*.{{t,j}s{,x,on},{c,sa,sc,le}ss,vue,md,y{,a}ml,graphql,html}": [
+      "prettier --write",
+      "git add"
+    ],
+    "./{src,demo,tests}/**/*.ts": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
   "dependencies": {
     "inquirer": "^6.4.1",
     "sequelize": "^5.9.2",
     "yargs": "^13.2.4"
   },
   "devDependencies": {
-    "@types/inquirer": "^6.0.3",
-    "@types/sequelize": "^4.28.3",
-    "@types/yargs": "^13.0.0",
     "@babel/core": "^7.5.0",
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
     "@babel/runtime": "^7.5.1",
+    "@types/inquirer": "^6.0.3",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.12",
+    "@types/rx": "^4.1.1",
+    "@types/sequelize": "^4.28.3",
+    "@types/through": "^0.0.29",
+    "@types/yargs": "^13.0.0",
+    "@types/yargs-parser": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "babel-jest": "^24.8.0",
@@ -31,12 +65,19 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jest": "^22.7.2",
     "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^3.0.0",
     "jest": "^24.8.0",
+    "lint-staged": "^9.1.0",
     "prettier": "^1.18.2",
+    "rxjs": "^6.5.2",
+    "through": "^2.3.8",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "yargs-parser": "^13.1.1"
   },
-  "browserslist": ["maintained node versions"],
+  "browserslist": [
+    "maintained node versions"
+  ],
   "jest": {
     "clearMocks": true,
     "coverageDirectory": "./covergage/",
@@ -49,7 +90,11 @@
     }
   },
   "babel": {
-    "presets": ["@babel/preset-env"],
-    "plugins": ["@babel/plugin-transform-runtime"]
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
   }
 }
