Converted test over, need to fix them so they pass. Copied over existing models from jaxboards code, will create the rest.

--- a/package.json
+++ b/package.json
@@ -65,13 +65,7 @@
   "jest": {
     "clearMocks": true,
     "coverageDirectory": "./covergage/",
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "./tsconfig.json"
-      }
-    }
+    "testEnvironment": "node"
   },
   "babel": {
     "presets": [
