Cleaned up some extra references to typescript and such, tests working again

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "prettier --write",
       "git add"
     ],
-    "./{src,demo,tests}/**/*.js": [
+    "./{lib,tests}/**/*.js": [
       "eslint --fix",
       "prettier --write",
       "git add"
